Fri Jul 14 20:05:33 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/pace_dll.dsp:
	* pace/win32/pace_lib.dsp:

	  Default the build to all POSIX units of functionality.
	  Defined PACE_HAS_ALL_POSIX_FUNCS in
	  Settings >> C/C++ >> Preprocessor

Fri Jul 14 19:06:09 2000  John Heitmann  <jwh1@cs.wustl.edu>

        * ../include/makeinclude/wrappermacros.GNU:
          Added -DPACE_HAS_ALL_POSIX_FUNCS to flags.

        * pace/pthread.h:
        * pace/unistd.h:
          Removed a duplicate closing }.

	* pace/pthread.h:
	  Added (void) in arguments to pointers to functions
	  which were otherwise interpreted as (...) args.

Fri Jul 14 18:50:07 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/unistd.h:

	  Removed incompatible #include <unistd.h> for win32.

Fri Jul 14 18:19:10 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/signal.h:

	  Typo...(pace_s_sigaction becomes pace_sigaction_s).

Fri Jul 14 18:05:09 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/dirent.h:

	  Removed dir_init.

	* pace/win32/dirent.inl:

	  win32 emulation functions finished.
	  closedir  ==  pace_win32_emulate_closedir
	  opendir   ==  pace_win32_emulate_opendir
	  readdir   ==  pace_win32_emulate_readdir

Fri Jul 14 17:46:56 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/dirent.h:

	  Removed 'const' member of dirent struct.
	  Added dir_init to guarantee that 'started_reading_' is
	  initialized correctly!

	* pace/win32/types.h:

	  Added support for win32
	  PACE_WIN32_INVALID_HANDLE = (void*)0

Fri Jul 14 15:55:24 2000  Joe Hoffert  <joeh@cs.wustl.edu>

        * pace/sys/mman.h:
        * pace/sys/stat.h:
        * pace/sys/times.h:
        * pace/sys/utsname.h:
        * pace/sys/wait.h:
          move closing } for extern "C" to near end of file, after
          .inl #includes.

        * pace/Makefile:
          Added defining appropriate macros when subsetting PACE into
           POSIX units of functionality.
